# ubb_master_CNIHPC

./: .gitignore  README.md
semester1/: README.md
semester1/academic_ethics_and_integrity_in_computer_science/courses/: README.md
semester1/academic_ethics_and_integrity_in_computer_science/seminars/: .README.md.swp
semester1/databases_in_cloud/courses/: README.md
semester1/databases_in_cloud/courses/course2/: README.md
semester1/databases_in_cloud/seminars/: README.md
semester1/digital_economy_principles/courses/: .README.md.swp  README.md
semester1/digital_economy_principles/seminars/: README.md
semester1/networks_virtualization/: .README.md.swp  README.md
semester1/networks_virtualization/wifi_analyzer/: README.md  audit_tool.py  wifi_analyzer.py  wifi_sniffer.py
semester1/sbpa_bpaa/courses/: README.md
semester2/algorithms_models_and_concepts_int_distributed_systems/: README.md
semester2/grid_cluster_and_cloud_computing/: README.md
semester2/inovation_management/: README.md
semester2/models_in_parallel_programming/: README.md
semester2/models_in_parallel_programming/labs/: Lab1DocumentationMPP.docx
semester2/models_in_parallel_programming/labs/lab3/lab3_project/: CMakeLists.txt  averageTimes.sh  main4a  main4a.cpp  main4b  main4b.cpp  main5a  main5a.cpp  main5b  main5b.cpp  verify_identical_binary_files  verify_identical_binary_files.cpp
semester2/models_in_parallel_programming/labs/lab4/lab4_project/: CMakeLists.txt  averageTimes.sh  main  main.cu  main7a  main7a.cu  main7b  main7b.cu
(+57 files in other folders)
